# Python-Web

./: .gitignore  README.md
md_01/: test.py
md_03/HW/: factorize.py  sorter.py
md_04/: app.py  index.html  test.py
md_04/HW/: Dockerfile  main.py
md_04/sockets/: client_TCP.py  server_TCP.py  socket_client_UDP.py  socket_server_UDP.py  socket_test.py
md_05/: aiohttp_post.py  aiohttp_test.py  cpu_bound.py  io_bound.py  sessions.py  web_server.py
md_05/HW/: main.py  pyproject.toml
md_05/simple_chat/: index.html  server.py
md_05/websockets_test/: consumer.py  producer.py  server.py
md_06/: connect.py  create_table.py  delete.py  final.py  seed.py  select_.py  update.py
md_06/EX-08/: create_db.py  (+5 more)
md_07/: pyproject.toml  rel_one_to_many.py  sessions_test.py  sqlalchemy_example.db  test.db  test.py
md_07/EX-09/: main.py  models.py  mynotes.db  pyproject.toml
md_07/EX-09/alembic/versions/: 9de4841934ba_init.py
md_07/HW/: main.py  my_select.py  pyproject.toml  seeds.py
md_07/HW/alembic/: env.py
md_07/HW/alembic/versions/: 1c1da70c5a23_init.py
md_07/HW/cli_interface/: command_handlers.py  command_parser.py
md_07/HW/src/: connect_db.py  models.py
md_08/HW/: command_parser.py  main.py  pyproject.toml  test.py
md_08/HW/_rabbit-MQ/: consumer_email.py  consumer_sms.py  create_task.py  producer.py
md_08/HW/_rabbit-MQ/connection/: connect.py
md_08/HW/_rabbit-MQ/models/: models.py
md_08/HW/mongodb/: main.py  seeds.py
md_08/HW/mongodb/models/: models.py
md_08/HW/typings/mongoengine/: __init__.pyi  connection.pyi  context_managers.pyi  dereference.pyi  document.pyi  errors.pyi  fields.pyi  pymongo_support.pyi  signals.pyi
md_08/HW/typings/mongoengine/base/: common.pyi  datastructures.pyi  document.pyi  fields.pyi  metaclasses.pyi  utils.pyi
md_08/HW/typings/mongoengine/queryset/: __init__.pyi  base.pyi  field_list.pyi  manager.pyi  queryset.pyi  transform.pyi  visitor.pyi
md_09/HW/: cli_interface.py  main.py  pyproject.toml  spiders.py
md_09/HW/models/: models.py
md_10/: pyproject.toml
md_10/HW/: README.md  pyproject.toml  qouetes_main.html
md_10/HW/quotes/: quotes.json
md_10/HW/quotes/conf/: config.py
md_10/HW/quotes/quotes/: settings.py  urls.py
md_10/HW/quotes/quotesapp/: forms.py  models.py  urls.py  views.py
md_10/HW/quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_tag_name.py
md_10/HW/quotes/quotesapp/scraping/: quotes_parser.py
md_10/HW/quotes/quotesapp/templates/quotesapp/: author.html  author_form.html  base.html  quote_form.html  quotes.html
md_10/HW/quotes/quotesapp/templatetags/: extract_tags.py  format_date.py  sort_list.py
md_10/HW/quotes/users/: forms.py  models.py  urls.py  views.py
md_10/HW/quotes/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_subject.txt  signup.html
md_10/HW/quotes/utils/: __init__.py  async_quotes_parser.py  authors.json  quotes.json  quotes_parser.py  scrape_quotes.py  test.py
md_10/mysite/: pyproject.toml
md_10/mysite/mysite/: settings.py
md_10/mysite/polls/: models.py  views.py
md_10/mysite/polls/migrations/: 0001_initial.py
md_10/mysite/polls/templates/polls/: index.html
md_10/notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
md_10/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
md_10/notes/noteapp/templates/noteapp/: base.html
md_10/notes/noteapp/templatetags/: extract_tags.py
md_10/notes/notes/: settings.py  urls.py
md_10/notes/users/: forms.py  models.py  urls.py  views.py
md_10/notes/users/migrations/: 0001_initial.py
md_11/HW_fasapi/: pyproject.toml
md_11/HW_fasapi/migrations/versions/: 04cbade1251b_init.py
md_11/HW_fasapi/src/api/: contacts.py  router.py
md_11/HW_fasapi/src/database/: models.py
md_11/HW_fasapi/src/repository/: contacts.py
(+25 files in other folders)
