[tool.poetry]
name = "homework08"
version = "0.1.0"
description = ""
authors = ["takeRednotBlue <maxymklym1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.0"
redis-lru = "^0.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
